arreglo css y table

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-    <link rel="stylesheet" href="css/style-login.css ">
+    <link rel="stylesheet" href="css/style.css ">
 </head>
 <body>
     <div class="modal-dialog text-center">
